// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Header default 1`] = `
<div
  className="root-0-2-1"
>
  <div>
    <a
      href="//ladot.lacity.org"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="LA Department of Transportation Logo"
        className="logo-0-2-2"
        src="ladot_white.png"
      />
    </a>
  </div>
  <ul
    className="navbar-0-2-3"
  >
    <li>
      <a
        className="link-0-2-4"
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li>
      <a
        className="link-0-2-4"
        href="/calculation/1"
        onClick={[Function]}
      >
        New Project
      </a>
    </li>
    <li>
      <a
        className="link-0-2-4"
        href="/about"
        onClick={[Function]}
      >
        About
      </a>
    </li>
    <li
      className="userLogin-0-2-5"
    >
      <a
        className="link-0-2-4 lastItem-0-2-6"
        href="/login"
        onClick={[Function]}
      >
        Login
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots NavButton disabled 1`] = `
<div
  className="tdm-wizard-nav-button-disabled"
  data-testid="Wizard Nav Button Label"
>
  Wizard Nav Button Label
</div>
`;

exports[`Storyshots NavButton enabled 1`] = `
<div
  className="tdm-wizard-nav-button"
  data-testid="Wizard Nav Button Label"
  onClick={[Function]}
>
  Wizard Nav Button Label
</div>
`;

exports[`Storyshots RuleInput default Input Boolean (False) 1`] = `
<div
  className="field-0-2-30 checkboxFieldWrapper-0-2-37"
>
  <label
    className="checkboxFieldLabel-0-2-38"
    htmlFor="LAND_USE_RESIDENTIAL"
  >
    Residential
  </label>
  <input
    checked={false}
    className="checkbox-0-2-39"
    data-testid="LAND_USE_RESIDENTIAL"
    id="LAND_USE_RESIDENTIAL"
    name="LAND_USE_RESIDENTIAL"
    onChange={[Function]}
    type="checkbox"
    value={true}
  />
</div>
`;

exports[`Storyshots RuleInput default Input Boolean (True) 1`] = `
<div
  className="field-0-2-30 checkboxFieldWrapper-0-2-37"
>
  <label
    className="checkboxFieldLabel-0-2-38"
    htmlFor="LAND_USE_RESIDENTIAL"
  >
    Residential
  </label>
  <input
    checked={true}
    className="checkbox-0-2-39"
    data-testid="LAND_USE_RESIDENTIAL"
    id="LAND_USE_RESIDENTIAL"
    name="LAND_USE_RESIDENTIAL"
    onChange={[Function]}
    type="checkbox"
    value={true}
  />
</div>
`;

exports[`Storyshots RuleInput default Input Number 1`] = `
<div
  className="field-0-2-30 numberFieldWrapper-0-2-31"
>
  <label
    className="textInputLabel-0-2-49"
    htmlFor="SF_RETAIL"
  >
    Sq Ft - Retail
  </label>
  <div
    className="numberField-0-2-32"
  >
    <input
      className="input-0-2-34"
      data-testid="SF_RETAIL"
      id="SF_RETAIL"
      max={null}
      min={null}
      name="SF_RETAIL"
      onChange={[Function]}
      type="text"
      value={42}
    />
  </div>
  <div
    className="numberFieldUnits-0-2-33"
  >
    sq ft
  </div>
  <div
    className="calcUnitsCaption-0-2-36"
  >
     
  </div>
</div>
`;

exports[`Storyshots RuleInput default Input String 1`] = `
<div
  className="field-0-2-30 textFieldWrapper-0-2-43"
  onBlur={[Function]}
>
  <label
    className="textInputLabel-0-2-49 requiredInputLabel-0-2-53"
    htmlFor="PROJECT_NAME"
  >
    Project Name*
  </label>
  <input
    className="textInput-0-2-47"
    data-testid="PROJECT_NAME"
    id="PROJECT_NAME"
    maxLength={400}
    name="PROJECT_NAME"
    onChange={[Function]}
    type="text"
    value="My Project Name"
  />
</div>
`;

exports[`Storyshots RuleInput default Strategy Boolean (False) 1`] = `
<div
  className="strategyContainer-0-2-55"
>
  <label
    className="strategyName-0-2-56"
    htmlFor="STRATEGY_PARKING_1"
  >
     
    Pricing/Unbundling
     
  </label>
  <div>
    <input
      checked={false}
      id="STRATEGY_PARKING_1"
      name="STRATEGY_PARKING_1"
      onChange={[Function]}
      type="checkbox"
      value={true}
    />
  </div>
  <div
    className="points-0-2-57"
  >
    NaN 
  </div>
  <div
    className="points-0-2-57"
  >
     
  </div>
</div>
`;

exports[`Storyshots RuleInput default Strategy Boolean (True) 1`] = `
<div
  className="strategyContainer-0-2-55"
>
  <label
    className="strategyName-0-2-56"
    htmlFor="STRATEGY_PARKING_1"
  >
     
    Pricing/Unbundling
     
  </label>
  <div>
    <input
      checked={true}
      id="STRATEGY_PARKING_1"
      name="STRATEGY_PARKING_1"
      onChange={[Function]}
      type="checkbox"
      value={true}
    />
  </div>
  <div
    className="points-0-2-57"
  >
    NaN 
  </div>
  <div
    className="points-0-2-57"
  >
     
  </div>
</div>
`;

exports[`Storyshots RuleInput default Strategy Choice 1`] = `
<div
  className="strategyContainer-0-2-55"
>
  <label
    className="strategyName-0-2-56"
    htmlFor="STRATEGY_AFFORDABLE"
  >
     
    Affordable Housing Level
     
  </label>
  <div
    className="choiceSelectContainer-0-2-60"
  >
    <select
      id="STRATEGY_AFFORDABLE"
      name="STRATEGY_AFFORDABLE"
      onChange={[Function]}
      value=""
      width="100%"
    >
      <option
        value=""
      >
        &lt; 35% of State Density Bonus
      </option>
      <option
        value="1"
      >
        35% of State Density Bonus
      </option>
      <option
        value="2"
      >
        TOC Tier 1
      </option>
      <option
        value="3"
      >
        TOC Tier 4
      </option>
      <option
        value="4"
      >
        100% Affortdable
      </option>
    </select>
  </div>
  <div
    className="points-0-2-57"
  >
    NaN 
  </div>
  <div
    className="points-0-2-57"
  >
     
  </div>
</div>
`;

exports[`Storyshots RuleInput default Strategy Number 1`] = `
<div
  className="strategyContainer-0-2-55"
>
  <label
    className="strategyName-0-2-56"
    htmlFor="PTS_ACCESS_3"
  >
     
    Network Improvement
     
  </label>
  <div
    className="numberInputContainer-0-2-58"
  >
    <input
      className="numberInput-0-2-59"
      id="PTS_ACCESS_3"
      max={100}
      min={0}
      name="PTS_ACCESS_3"
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
  <div
    className="points-0-2-57"
  >
    NaN 
  </div>
  <div
    className="points-0-2-57"
  >
     
  </div>
</div>
`;

exports[`Storyshots RuleInputList default 1`] = `
<div
  className="root-0-2-63"
>
  <div
    className="field-0-2-30 numberFieldWrapper-0-2-31"
  >
    <label
      className="textInputLabel-0-2-49"
      htmlFor="UNITS_HABIT_LT3"
    >
      # Habitable Rooms &lt; 3
    </label>
    <div
      className="numberField-0-2-32"
    >
      <input
        className="input-0-2-34"
        data-testid="UNITS_HABIT_LT3"
        id="UNITS_HABIT_LT3"
        max={null}
        min={0}
        name="UNITS_HABIT_LT3"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div
      className="numberFieldUnits-0-2-33"
    >
      dwelling units
    </div>
    <div
      className="calcUnitsCaption-0-2-36"
    >
       
    </div>
  </div>
  <div
    className="field-0-2-30 numberFieldWrapper-0-2-31"
  >
    <label
      className="textInputLabel-0-2-49"
      htmlFor="UNITS_HABIT_3"
    >
      # Habitable Rooms = 3
    </label>
    <div
      className="numberField-0-2-32"
    >
      <input
        className="input-0-2-34"
        data-testid="UNITS_HABIT_3"
        id="UNITS_HABIT_3"
        max={null}
        min={0}
        name="UNITS_HABIT_3"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div
      className="numberFieldUnits-0-2-33"
    >
      dwelling units
    </div>
    <div
      className="calcUnitsCaption-0-2-36"
    >
       
    </div>
  </div>
  <div
    className="field-0-2-30 numberFieldWrapper-0-2-31"
  >
    <label
      className="textInputLabel-0-2-49"
      htmlFor="UNITS_HABIT_GT3"
    >
      # Habitable Rooms &gt; 3
    </label>
    <div
      className="numberField-0-2-32"
    >
      <input
        className="input-0-2-34"
        data-testid="UNITS_HABIT_GT3"
        id="UNITS_HABIT_GT3"
        max={null}
        min={0}
        name="UNITS_HABIT_GT3"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div
      className="numberFieldUnits-0-2-33"
    >
      dwelling units
    </div>
    <div
      className="calcUnitsCaption-0-2-36"
    >
       
    </div>
  </div>
  <div
    className="field-0-2-30 numberFieldWrapper-0-2-31"
  >
    <label
      className="textInputLabel-0-2-49"
      htmlFor="UNITS_CONDO"
    >
      Condo - Units
    </label>
    <div
      className="numberField-0-2-32"
    >
      <input
        className="input-0-2-34"
        data-testid="UNITS_CONDO"
        id="UNITS_CONDO"
        max={null}
        min={0}
        name="UNITS_CONDO"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div
      className="numberFieldUnits-0-2-33"
    >
      dwelling units
    </div>
    <div
      className="calcUnitsCaption-0-2-36"
    >
       
    </div>
  </div>
  <div
    className="field-0-2-30 numberFieldWrapper-0-2-31"
  >
    <label
      className="textInputLabel-0-2-49"
      htmlFor="PARK_CONDO"
    >
      Condo - Enter Parking Space Req'd
    </label>
    <div
      className="numberField-0-2-32"
    >
      <input
        className="input-0-2-34"
        data-testid="PARK_CONDO"
        id="PARK_CONDO"
        max={null}
        min={0}
        name="PARK_CONDO"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div
      className="numberFieldUnits-0-2-33"
    >
      spcs
    </div>
    <div
      className="calcUnitsCaption-0-2-36"
    >
       
    </div>
  </div>
</div>
`;

exports[`Storyshots RuleInputPanels default 1`] = `
Array [
  <div
    className="panelContainer-0-2-64"
  >
    <div
      className="strategyContainer-0-2-65"
    >
      <h4
        className="strategyName-0-2-66"
      >
        Residential Inputs
      </h4>
    </div>
    <div
      className="root-0-2-63"
    >
      <div
        className="field-0-2-30 numberFieldWrapper-0-2-31"
      >
        <label
          className="textInputLabel-0-2-49"
          htmlFor="UNITS_HABIT_LT3"
        >
          # Habitable Rooms &lt; 3
        </label>
        <div
          className="numberField-0-2-32"
        >
          <input
            className="input-0-2-34"
            data-testid="UNITS_HABIT_LT3"
            id="UNITS_HABIT_LT3"
            max={null}
            min={0}
            name="UNITS_HABIT_LT3"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-33"
        >
          dwelling units
        </div>
        <div
          className="calcUnitsCaption-0-2-36"
        >
           
        </div>
      </div>
      <div
        className="field-0-2-30 numberFieldWrapper-0-2-31"
      >
        <label
          className="textInputLabel-0-2-49"
          htmlFor="UNITS_HABIT_3"
        >
          # Habitable Rooms = 3
        </label>
        <div
          className="numberField-0-2-32"
        >
          <input
            className="input-0-2-34"
            data-testid="UNITS_HABIT_3"
            id="UNITS_HABIT_3"
            max={null}
            min={0}
            name="UNITS_HABIT_3"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-33"
        >
          dwelling units
        </div>
        <div
          className="calcUnitsCaption-0-2-36"
        >
           
        </div>
      </div>
      <div
        className="field-0-2-30 numberFieldWrapper-0-2-31"
      >
        <label
          className="textInputLabel-0-2-49"
          htmlFor="UNITS_HABIT_GT3"
        >
          # Habitable Rooms &gt; 3
        </label>
        <div
          className="numberField-0-2-32"
        >
          <input
            className="input-0-2-34"
            data-testid="UNITS_HABIT_GT3"
            id="UNITS_HABIT_GT3"
            max={null}
            min={0}
            name="UNITS_HABIT_GT3"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-33"
        >
          dwelling units
        </div>
        <div
          className="calcUnitsCaption-0-2-36"
        >
           
        </div>
      </div>
      <div
        className="field-0-2-30 numberFieldWrapper-0-2-31"
      >
        <label
          className="textInputLabel-0-2-49"
          htmlFor="UNITS_CONDO"
        >
          Condo - Units
        </label>
        <div
          className="numberField-0-2-32"
        >
          <input
            className="input-0-2-34"
            data-testid="UNITS_CONDO"
            id="UNITS_CONDO"
            max={null}
            min={0}
            name="UNITS_CONDO"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-33"
        >
          dwelling units
        </div>
        <div
          className="calcUnitsCaption-0-2-36"
        >
           
        </div>
      </div>
      <div
        className="field-0-2-30 numberFieldWrapper-0-2-31"
      >
        <label
          className="textInputLabel-0-2-49"
          htmlFor="PARK_CONDO"
        >
          Condo - Enter Parking Space Req'd
        </label>
        <div
          className="numberField-0-2-32"
        >
          <input
            className="input-0-2-34"
            data-testid="PARK_CONDO"
            id="PARK_CONDO"
            max={null}
            min={0}
            name="PARK_CONDO"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-33"
        >
          spcs
        </div>
        <div
          className="calcUnitsCaption-0-2-36"
        >
           
        </div>
      </div>
    </div>
  </div>,
  <div
    className="panelContainer-0-2-64"
  >
    <div
      className="strategyContainer-0-2-65"
    >
      <h4
        className="strategyName-0-2-66"
      >
        Commercial Inputs
      </h4>
    </div>
    <div
      className="root-0-2-63"
    >
      <div
        className="field-0-2-30 numberFieldWrapper-0-2-31"
      >
        <label
          className="textInputLabel-0-2-49"
          htmlFor="SF_RESTAURANT"
        >
          Sq Ft - Restaurant/Bar/General
        </label>
        <div
          className="numberField-0-2-32"
        >
          <input
            className="input-0-2-34"
            data-testid="SF_RESTAURANT"
            id="SF_RESTAURANT"
            max={null}
            min={0}
            name="SF_RESTAURANT"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-33"
        >
          sq ft
        </div>
        <div
          className="calcUnitsCaption-0-2-36"
        >
           
        </div>
      </div>
      <div
        className="field-0-2-30 numberFieldWrapper-0-2-31"
      >
        <label
          className="textInputLabel-0-2-49"
          htmlFor="SF_HEALTH_CLUB"
        >
          Sq Ft - Health Club
        </label>
        <div
          className="numberField-0-2-32"
        >
          <input
            className="input-0-2-34"
            data-testid="SF_HEALTH_CLUB"
            id="SF_HEALTH_CLUB"
            max={null}
            min={0}
            name="SF_HEALTH_CLUB"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-33"
        >
          sq ft
        </div>
        <div
          className="calcUnitsCaption-0-2-36"
        >
           
        </div>
      </div>
      <div
        className="field-0-2-30 numberFieldWrapper-0-2-31"
      >
        <label
          className="textInputLabel-0-2-49"
          htmlFor="SF_RESTAURANT_TAKEOUT"
        >
          Sq Ft - Take-out Restaurant
        </label>
        <div
          className="numberField-0-2-32"
        >
          <input
            className="input-0-2-34"
            data-testid="SF_RESTAURANT_TAKEOUT"
            id="SF_RESTAURANT_TAKEOUT"
            max={null}
            min={0}
            name="SF_RESTAURANT_TAKEOUT"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-33"
        >
          sq ft
        </div>
        <div
          className="calcUnitsCaption-0-2-36"
        >
           
        </div>
      </div>
      <div
        className="field-0-2-30 numberFieldWrapper-0-2-31"
      >
        <label
          className="textInputLabel-0-2-49"
          htmlFor="SF_OFFICE"
        >
          Sq Ft - Office, Business, Manufacturing, Industrial
        </label>
        <div
          className="numberField-0-2-32"
        >
          <input
            className="input-0-2-34"
            data-testid="SF_OFFICE"
            id="SF_OFFICE"
            max={null}
            min={0}
            name="SF_OFFICE"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-33"
        >
          sq ft
        </div>
        <div
          className="calcUnitsCaption-0-2-36"
        >
           
        </div>
      </div>
      <div
        className="field-0-2-30 numberFieldWrapper-0-2-31"
      >
        <label
          className="textInputLabel-0-2-49"
          htmlFor="SF_WAREHOUSE"
        >
          Sq Ft - Warehouse
        </label>
        <div
          className="numberField-0-2-32"
        >
          <input
            className="input-0-2-34"
            data-testid="SF_WAREHOUSE"
            id="SF_WAREHOUSE"
            max={null}
            min={0}
            name="SF_WAREHOUSE"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-33"
        >
          sq ft
        </div>
        <div
          className="calcUnitsCaption-0-2-36"
        >
           
        </div>
      </div>
    </div>
  </div>,
  <div
    className="panelContainer-0-2-64"
  >
    <div
      className="strategyContainer-0-2-65"
    >
      <h4
        className="strategyName-0-2-66"
      >
        Institutional Inputs
      </h4>
    </div>
    <div
      className="root-0-2-63"
    >
      <div
        className="field-0-2-30 numberFieldWrapper-0-2-31"
      >
        <label
          className="textInputLabel-0-2-49"
          htmlFor="SF_INST_MEDICAL_SVC"
        >
          Sq Ft - Medical Offices, Clinics, Service Facilities
        </label>
        <div
          className="numberField-0-2-32"
        >
          <input
            className="input-0-2-34"
            data-testid="SF_INST_MEDICAL_SVC"
            id="SF_INST_MEDICAL_SVC"
            max={null}
            min={0}
            name="SF_INST_MEDICAL_SVC"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-33"
        >
          sq ft
        </div>
        <div
          className="calcUnitsCaption-0-2-36"
        >
           
        </div>
      </div>
      <div
        className="field-0-2-30 numberFieldWrapper-0-2-31"
      >
        <label
          className="textInputLabel-0-2-49"
          htmlFor="SF_INST_OTHER"
        >
          Sq Ft - Other Institutional
        </label>
        <div
          className="numberField-0-2-32"
        >
          <input
            className="input-0-2-34"
            data-testid="SF_INST_OTHER"
            id="SF_INST_OTHER"
            max={null}
            min={0}
            name="SF_INST_OTHER"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-33"
        >
          sq ft
        </div>
        <div
          className="calcUnitsCaption-0-2-36"
        >
           
        </div>
      </div>
      <div
        className="field-0-2-30 numberFieldWrapper-0-2-31"
      >
        <label
          className="textInputLabel-0-2-49"
          htmlFor="SF_INST_GOV"
        >
          Sq Ft - Government Institution
        </label>
        <div
          className="numberField-0-2-32"
        >
          <input
            className="input-0-2-34"
            data-testid="SF_INST_GOV"
            id="SF_INST_GOV"
            max={null}
            min={0}
            name="SF_INST_GOV"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-33"
        >
          sq ft
        </div>
        <div
          className="calcUnitsCaption-0-2-36"
        >
           
        </div>
      </div>
      <div
        className="field-0-2-30 numberFieldWrapper-0-2-31"
      >
        <label
          className="textInputLabel-0-2-49"
          htmlFor="BED_HOSPITAL"
        >
          Patient Hospital Beds
        </label>
        <div
          className="numberField-0-2-32"
        >
          <input
            className="input-0-2-34"
            data-testid="BED_HOSPITAL"
            id="BED_HOSPITAL"
            max={null}
            min={0}
            name="BED_HOSPITAL"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-33"
        >
          beds
        </div>
        <div
          className="calcUnitsCaption-0-2-36"
        >
           
        </div>
      </div>
      <div
        className="field-0-2-30 numberFieldWrapper-0-2-31"
      >
        <label
          className="textInputLabel-0-2-49"
          htmlFor="BED_CONVALESCENT"
        >
          Convalescent Institution Beds
        </label>
        <div
          className="numberField-0-2-32"
        >
          <input
            className="input-0-2-34"
            data-testid="BED_CONVALESCENT"
            id="BED_CONVALESCENT"
            max={null}
            min={0}
            name="BED_CONVALESCENT"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-33"
        >
          beds
        </div>
        <div
          className="calcUnitsCaption-0-2-36"
        >
           
        </div>
      </div>
    </div>
  </div>,
  <div
    className="panelContainer-0-2-64"
  >
    <div
      className="strategyContainer-0-2-65"
    >
      <h4
        className="strategyName-0-2-66"
      >
        Other Land Use Inputs
      </h4>
    </div>
    <div
      className="root-0-2-63"
    >
      <div
        className="field-0-2-30 numberFieldWrapper-0-2-31"
      >
        <label
          className="textInputLabel-0-2-49"
          htmlFor="SEAT_AUDITORIUM"
        >
          # Seats - Auditorium
        </label>
        <div
          className="numberField-0-2-32"
        >
          <input
            className="input-0-2-34"
            data-testid="SEAT_AUDITORIUM"
            id="SEAT_AUDITORIUM"
            max={null}
            min={0}
            name="SEAT_AUDITORIUM"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-33"
        >
          seats
        </div>
        <div
          className="calcUnitsCaption-0-2-36"
        >
           
        </div>
      </div>
      <div
        className="field-0-2-30 numberFieldWrapper-0-2-31"
      >
        <label
          className="textInputLabel-0-2-49"
          htmlFor="SF_AUDITORIUM_NO_SEATS"
        >
          Sq Ft - Auditorium w/o Seats
        </label>
        <div
          className="numberField-0-2-32"
        >
          <input
            className="input-0-2-34"
            data-testid="SF_AUDITORIUM_NO_SEATS"
            id="SF_AUDITORIUM_NO_SEATS"
            max={null}
            min={0}
            name="SF_AUDITORIUM_NO_SEATS"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-33"
        >
          sq ft
        </div>
        <div
          className="calcUnitsCaption-0-2-36"
        >
           
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots RuleStrategyList default 1`] = `
<div
  className="root-0-2-69"
>
  <div
    className="strategyContainer-0-2-55"
  >
    <label
      className="strategyName-0-2-56"
      htmlFor="STRATEGY_PARKING_2"
    >
       
      Cash-Out
       
    </label>
    <div>
      <input
        checked={false}
        id="STRATEGY_PARKING_2"
        name="STRATEGY_PARKING_2"
        onChange={[Function]}
        type="checkbox"
        value={true}
      />
    </div>
    <div
      className="points-0-2-57"
    >
      NaN 
    </div>
    <div
      className="points-0-2-57"
    >
       
    </div>
  </div>
  <div
    className="strategyContainer-0-2-55"
  >
    <label
      className="strategyName-0-2-56"
      htmlFor="STRATEGY_PARKING_1"
    >
       
      Pricing/Unbundling
       
    </label>
    <div>
      <input
        checked={false}
        id="STRATEGY_PARKING_1"
        name="STRATEGY_PARKING_1"
        onChange={[Function]}
        type="checkbox"
        value={true}
      />
    </div>
    <div
      className="points-0-2-57"
    >
      NaN 
    </div>
    <div
      className="points-0-2-57"
    >
       
    </div>
  </div>
  <div
    className="strategyContainer-0-2-55"
  >
    <label
      className="strategyName-0-2-56"
      htmlFor="STRATEGY_PARKING_3"
    >
       
      Shared Parking
       
    </label>
    <div
      className="choiceSelectContainer-0-2-60"
    >
      <select
        id="STRATEGY_PARKING_3"
        name="STRATEGY_PARKING_3"
        onChange={[Function]}
        value=""
        width="100%"
      >
        <option
          value="0"
        >
          &lt; 25% spaces shared
        </option>
        <option
          value="25"
        >
          25%+ spaces shared
        </option>
        <option
          value="50"
        >
          50%+ spaces shared
        </option>
        <option
          value="75"
        >
          75%+ spaces shared
        </option>
        <option
          value="100"
        >
          100% spaces shared
        </option>
      </select>
    </div>
    <div
      className="points-0-2-57"
    >
      NaN 
    </div>
    <div
      className="points-0-2-57"
    >
       
    </div>
  </div>
  <div
    className="strategyContainer-0-2-55"
  >
    <label
      className="strategyName-0-2-56"
      htmlFor="STRATEGY_PARKING_4"
    >
       
      Public Parking
       
    </label>
    <div>
      <input
        checked={false}
        id="STRATEGY_PARKING_4"
        name="STRATEGY_PARKING_4"
        onChange={[Function]}
        type="checkbox"
        value={true}
      />
    </div>
    <div
      className="points-0-2-57"
    >
      NaN 
    </div>
    <div
      className="points-0-2-57"
    >
       
    </div>
  </div>
  <div
    className="strategyContainer-0-2-55"
  >
    <label
      className="strategyName-0-2-56"
      htmlFor="STRATEGY_PARKING_5"
    >
       
      Reduced Parking Supply
       
    </label>
    <div>
      <input
        checked={false}
        id="STRATEGY_PARKING_5"
        name="STRATEGY_PARKING_5"
        onChange={[Function]}
        type="checkbox"
        value={true}
      />
    </div>
    <div
      className="points-0-2-57"
    >
      NaN 
    </div>
    <div
      className="points-0-2-57"
    >
       
    </div>
  </div>
  <div
    className="strategyContainer-0-2-55"
  >
    <label
      className="strategyName-0-2-56"
      htmlFor="PTS_PARKING_1"
    >
       
      Pts for Pricing/Unbundling
       
    </label>
    <div
      className="numberInputContainer-0-2-58"
    >
      <input
        className="numberInput-0-2-59"
        id="PTS_PARKING_1"
        max={8}
        min={8}
        name="PTS_PARKING_1"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div
      className="points-0-2-57"
    >
      NaN 
    </div>
    <div
      className="points-0-2-57"
    >
       
    </div>
  </div>
</div>
`;

exports[`Storyshots RuleStrategyPanels default 1`] = `
Array [
  <div
    className="panelContainer-0-2-70"
  >
    <div
      className="strategyContainer-0-2-71"
    >
      <h4
        className="strategyName-0-2-72"
      >
        Accessibility
      </h4>
      <div
        className="points-0-2-73"
      >
        Possible
      </div>
      <div
        className="points-0-2-73"
      >
        Earned
      </div>
    </div>
    <div
      className="root-0-2-69"
    >
      <div
        className="strategyContainer-0-2-55"
      >
        <label
          className="strategyName-0-2-56"
          htmlFor="PTS_ACCESS_1"
        >
           
          Pts for Correct Substandard Infrastructure
           
        </label>
        <div
          className="numberInputContainer-0-2-58"
        >
          <input
            className="numberInput-0-2-59"
            id="PTS_ACCESS_1"
            max={5}
            min={2}
            name="PTS_ACCESS_1"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="points-0-2-57"
        >
          NaN 
        </div>
        <div
          className="points-0-2-57"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-55"
      >
        <label
          className="strategyName-0-2-56"
          htmlFor="PTS_ACCESS_2"
        >
           
          Pts for Intersection Improvement
           
        </label>
        <div
          className="numberInputContainer-0-2-58"
        >
          <input
            className="numberInput-0-2-59"
            id="PTS_ACCESS_2"
            max={5}
            min={2}
            name="PTS_ACCESS_2"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="points-0-2-57"
        >
          NaN 
        </div>
        <div
          className="points-0-2-57"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-55"
      >
        <label
          className="strategyName-0-2-56"
          htmlFor="STRATEGY_ACCESS_1"
        >
           
          Correct Substandard Infrastructure
           
        </label>
        <div
          className="choiceSelectContainer-0-2-60"
        >
          <select
            id="STRATEGY_ACCESS_1"
            name="STRATEGY_ACCESS_1"
            onChange={[Function]}
            value=""
            width="100%"
          >
            <option
              value="0"
            >
              &lt; 25% streets improved
            </option>
            <option
              value="25"
            >
              25%+ streets improved
            </option>
            <option
              value="50"
            >
              50%+ streets improved
            </option>
            <option
              value="75"
            >
              75%+ streets improved
            </option>
            <option
              value="100"
            >
              100% streets improved
            </option>
          </select>
        </div>
        <div
          className="points-0-2-57"
        >
          NaN 
        </div>
        <div
          className="points-0-2-57"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-55"
      >
        <label
          className="strategyName-0-2-56"
          htmlFor="STRATEGY_ACCESS_2"
        >
           
          Intersection Improvements
           
        </label>
        <div
          className="choiceSelectContainer-0-2-60"
        >
          <select
            id="STRATEGY_ACCESS_2"
            name="STRATEGY_ACCESS_2"
            onChange={[Function]}
            value=""
            width="100%"
          >
            <option
              value="0"
            >
              &lt; 25% intersections improved
            </option>
            <option
              value="25"
            >
              25%+ intersections improved
            </option>
            <option
              value="50"
            >
              50%+ intersections improved
            </option>
            <option
              value="75"
            >
              75%+ intersections improved
            </option>
            <option
              value="100"
            >
              100% intersections improved
            </option>
          </select>
        </div>
        <div
          className="points-0-2-57"
        >
          NaN 
        </div>
        <div
          className="points-0-2-57"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-55"
      >
        <label
          className="strategyName-0-2-56"
          htmlFor="PTS_ACCESS_3"
        >
           
          Network Improvement
           
        </label>
        <div
          className="numberInputContainer-0-2-58"
        >
          <input
            className="numberInput-0-2-59"
            id="PTS_ACCESS_3"
            max={100}
            min={0}
            name="PTS_ACCESS_3"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="points-0-2-57"
        >
          NaN 
        </div>
        <div
          className="points-0-2-57"
        >
           
        </div>
      </div>
    </div>
  </div>,
  <div
    className="panelContainer-0-2-70"
  >
    <div
      className="strategyContainer-0-2-71"
    >
      <h4
        className="strategyName-0-2-72"
      >
        Affordable Housing
      </h4>
      <div
        className="points-0-2-73"
      >
        Possible
      </div>
      <div
        className="points-0-2-73"
      >
        Earned
      </div>
    </div>
    <div
      className="root-0-2-69"
    >
      <div
        className="strategyContainer-0-2-55"
      >
        <label
          className="strategyName-0-2-56"
          htmlFor="STRATEGY_AFFORDABLE"
        >
           
          Affordable Housing Level
           
        </label>
        <div
          className="choiceSelectContainer-0-2-60"
        >
          <select
            id="STRATEGY_AFFORDABLE"
            name="STRATEGY_AFFORDABLE"
            onChange={[Function]}
            value=""
            width="100%"
          >
            <option
              value=""
            >
              &lt; 35% of State Density Bonus
            </option>
            <option
              value="1"
            >
              35% of State Density Bonus
            </option>
            <option
              value="2"
            >
              TOC Tier 1
            </option>
            <option
              value="3"
            >
              TOC Tier 4
            </option>
            <option
              value="4"
            >
              100% Affortdable
            </option>
          </select>
        </div>
        <div
          className="points-0-2-57"
        >
          NaN 
        </div>
        <div
          className="points-0-2-57"
        >
           
        </div>
      </div>
    </div>
  </div>,
  <div
    className="panelContainer-0-2-70"
  >
    <div
      className="strategyContainer-0-2-71"
    >
      <h4
        className="strategyName-0-2-72"
      >
        Bicycle Facilities
      </h4>
      <div
        className="points-0-2-73"
      >
        Possible
      </div>
      <div
        className="points-0-2-73"
      >
        Earned
      </div>
    </div>
    <div
      className="root-0-2-69"
    >
      <div
        className="strategyContainer-0-2-55"
      >
        <label
          className="strategyName-0-2-56"
          htmlFor="STRATEGY_BIKE_1"
        >
           
          Locate Near Bike Share
           
        </label>
        <div>
          <input
            checked={false}
            id="STRATEGY_BIKE_1"
            name="STRATEGY_BIKE_1"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-57"
        >
          NaN 
        </div>
        <div
          className="points-0-2-57"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-55"
      >
        <label
          className="strategyName-0-2-56"
          htmlFor="PTS_BIKE_1"
        >
           
          Points for Locate Near Bike Share
           
        </label>
        <div
          className="numberInputContainer-0-2-58"
        >
          <input
            className="numberInput-0-2-59"
            id="PTS_BIKE_1"
            max={2}
            min={2}
            name="PTS_BIKE_1"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="points-0-2-57"
        >
          NaN 
        </div>
        <div
          className="points-0-2-57"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-55"
      >
        <label
          className="strategyName-0-2-56"
          htmlFor="STRATEGY_BIKE_2"
        >
           
          Bike Share Station
           
        </label>
        <div>
          <input
            checked={false}
            id="STRATEGY_BIKE_2"
            name="STRATEGY_BIKE_2"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-57"
        >
          NaN 
        </div>
        <div
          className="points-0-2-57"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-55"
      >
        <label
          className="strategyName-0-2-56"
          htmlFor="STRATEGY_BIKE_3"
        >
           
          Bike Share Memberships
           
        </label>
        <div>
          <input
            checked={false}
            id="STRATEGY_BIKE_3"
            name="STRATEGY_BIKE_3"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-57"
        >
          NaN 
        </div>
        <div
          className="points-0-2-57"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-55"
      >
        <label
          className="strategyName-0-2-56"
          htmlFor="STRATEGY_BIKE_4"
        >
           
          Bike Parking
           
        </label>
        <div>
          <input
            checked={false}
            id="STRATEGY_BIKE_4"
            name="STRATEGY_BIKE_4"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-57"
        >
          NaN 
        </div>
        <div
          className="points-0-2-57"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-55"
      >
        <label
          className="strategyName-0-2-56"
          htmlFor="STRATEGY_BIKE_5"
        >
           
          Changing / Shower / Locker Facilities
           
        </label>
        <div>
          <input
            checked={false}
            id="STRATEGY_BIKE_5"
            name="STRATEGY_BIKE_5"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-57"
        >
          NaN 
        </div>
        <div
          className="points-0-2-57"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-55"
      >
        <label
          className="strategyName-0-2-56"
          htmlFor="STRATEGY_BIKE_BONUS"
        >
           
          Bike Bonus
           
        </label>
        <div
          className="allElse-0-2-62"
          name="STRATEGY_BIKE_BONUS"
        />
        <div
          className="points-0-2-57"
        >
          NaN 
        </div>
        <div
          className="points-0-2-57"
        >
           
        </div>
      </div>
    </div>
  </div>,
  <div
    className="panelContainer-0-2-70"
  >
    <div
      className="strategyContainer-0-2-71"
    >
      <h4
        className="strategyName-0-2-72"
      >
        Car Sharing
      </h4>
      <div
        className="points-0-2-73"
      >
        Possible
      </div>
      <div
        className="points-0-2-73"
      >
        Earned
      </div>
    </div>
    <div
      className="root-0-2-69"
    >
      <div
        className="strategyContainer-0-2-55"
      >
        <label
          className="strategyName-0-2-56"
          htmlFor="STRATEGY_CAR_SHARE_1"
        >
           
          Car Share Parking
           
        </label>
        <div>
          <input
            checked={false}
            id="STRATEGY_CAR_SHARE_1"
            name="STRATEGY_CAR_SHARE_1"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-57"
        >
          NaN 
        </div>
        <div
          className="points-0-2-57"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-55"
      >
        <label
          className="strategyName-0-2-56"
          htmlFor="STRATEGY_CAR_SHARE_2"
        >
           
          Car Share Memberships
           
        </label>
        <div>
          <input
            checked={false}
            id="STRATEGY_CAR_SHARE_2"
            name="STRATEGY_CAR_SHARE_2"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-57"
        >
          NaN 
        </div>
        <div
          className="points-0-2-57"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-55"
      >
        <label
          className="strategyName-0-2-56"
          htmlFor="STRATEGY_CAR_SHARE_3"
        >
           
          Blue LA Car Share Memberships
           
        </label>
        <div>
          <input
            checked={false}
            id="STRATEGY_CAR_SHARE_3"
            name="STRATEGY_CAR_SHARE_3"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-57"
        >
          NaN 
        </div>
        <div
          className="points-0-2-57"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-55"
      >
        <label
          className="strategyName-0-2-56"
          htmlFor="STRATEGY_CAR_SHARE_4"
        >
           
          Private Car Share Fleet
           
        </label>
        <div>
          <input
            checked={false}
            id="STRATEGY_CAR_SHARE_4"
            name="STRATEGY_CAR_SHARE_4"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-57"
        >
          NaN 
        </div>
        <div
          className="points-0-2-57"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-55"
      >
        <label
          className="strategyName-0-2-56"
          htmlFor="STRATEGY_CAR_SHARE_ELECTRIC"
        >
           
          Electric Vehicle Bonus
           
        </label>
        <div>
          <input
            checked={false}
            id="STRATEGY_CAR_SHARE_ELECTRIC"
            name="STRATEGY_CAR_SHARE_ELECTRIC"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-57"
        >
          NaN 
        </div>
        <div
          className="points-0-2-57"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-55"
      >
        <label
          className="strategyName-0-2-56"
          htmlFor="STRATEGY_CAR_SHARE_BONUS"
        >
           
          Car Share Bonus
           
        </label>
        <div
          className="allElse-0-2-62"
          name="STRATEGY_CAR_SHARE_BONUS"
        />
        <div
          className="points-0-2-57"
        >
          NaN 
        </div>
        <div
          className="points-0-2-57"
        >
           
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Sidebar default 1`] = `
<div
  className="sidebar-container-0-2-75"
>
  <div />
  <div
    className="sidebar-content-0-2-76"
  />
</div>
`;

exports[`Storyshots SinglePageResultList default 1`] = `
<div
  className="root-0-2-7"
>
  <div
    className="tdm-calculation-metrics-panel"
  >
    <h3>
      Req'd Parking
    </h3>
    <div />
    <div>
       
      spcs
    </div>
  </div>
  <div
    className="tdm-calculation-metrics-panel"
  >
    <h3>
      Parking Requirement - Residential
    </h3>
    <div />
    <div>
       
      spcs
    </div>
  </div>
  <div
    className="tdm-calculation-metrics-panel"
  >
    <h3>
      Target Points
    </h3>
    <div />
    <div>
       
      pts
    </div>
  </div>
  <div
    className="tdm-calculation-metrics-panel"
  >
    <h3>
      Parking Requirement - Hotel
    </h3>
    <div />
    <div>
       
      spcs
    </div>
  </div>
</div>
`;

exports[`Storyshots SinglePageResultView default 1`] = `
<div
  className="tdm-calculation-metrics-panel"
>
  <h3 />
  <div>
    -1
  </div>
  <div>
     
  </div>
</div>
`;

exports[`Storyshots SinglePageRuleInput default Input Boolean (False) 1`] = `
<div
  className="rule-0-2-9"
>
  <div
    className="name-0-2-11"
  >
    Residential
  </div>
  <input
    checked={false}
    className="code-0-2-13"
    name="LAND_USE_RESIDENTIAL"
    onChange={[Function]}
    type="checkbox"
    value={true}
  />
  <div
    className="units-0-2-14"
  >
    
  </div>
  <div
    className="calcUnits-0-2-15"
  >
     
  </div>
</div>
`;

exports[`Storyshots SinglePageRuleInput default Input Boolean (True) 1`] = `
<div
  className="rule-0-2-9"
>
  <div
    className="name-0-2-11"
  >
    Residential
  </div>
  <input
    checked={true}
    className="code-0-2-13"
    name="LAND_USE_RESIDENTIAL"
    onChange={[Function]}
    type="checkbox"
    value={true}
  />
  <div
    className="units-0-2-14"
  >
    
  </div>
  <div
    className="calcUnits-0-2-15"
  >
     
  </div>
</div>
`;

exports[`Storyshots SinglePageRuleInput default Input Number 1`] = `
<div
  className="rule-0-2-9 numberRule-0-2-10"
>
  <div
    className="name-0-2-11"
  >
    Sq Ft - Retail
  </div>
  <input
    className="code-0-2-13"
    name="SF_RETAIL"
    onChange={[Function]}
    type="text"
    value=""
  />
  <div
    className="units-0-2-14"
  >
    sq ft
  </div>
  <div
    className="calcUnits-0-2-15"
  >
     
  </div>
</div>
`;

exports[`Storyshots SinglePageRuleList default 1`] = `
<div
  className="root-0-2-18"
>
  <div
    className="rule-0-2-9 numberRule-0-2-10"
  >
    <div
      className="name-0-2-11"
    >
      # Habitable Rooms &lt; 3
    </div>
    <input
      className="code-0-2-13"
      name="UNITS_HABIT_LT3"
      onChange={[Function]}
      type="text"
      value=""
    />
    <div
      className="units-0-2-14"
    >
      dwelling units
    </div>
    <div
      className="calcUnits-0-2-15"
    >
       
    </div>
  </div>
  <div
    className="rule-0-2-9 numberRule-0-2-10"
  >
    <div
      className="name-0-2-11"
    >
      # Habitable Rooms = 3
    </div>
    <input
      className="code-0-2-13"
      name="UNITS_HABIT_3"
      onChange={[Function]}
      type="text"
      value=""
    />
    <div
      className="units-0-2-14"
    >
      dwelling units
    </div>
    <div
      className="calcUnits-0-2-15"
    >
       
    </div>
  </div>
  <div
    className="rule-0-2-9 numberRule-0-2-10"
  >
    <div
      className="name-0-2-11"
    >
      # Habitable Rooms &gt; 3
    </div>
    <input
      className="code-0-2-13"
      name="UNITS_HABIT_GT3"
      onChange={[Function]}
      type="text"
      value=""
    />
    <div
      className="units-0-2-14"
    >
      dwelling units
    </div>
    <div
      className="calcUnits-0-2-15"
    >
       
    </div>
  </div>
  <div
    className="rule-0-2-9 numberRule-0-2-10"
  >
    <div
      className="name-0-2-11"
    >
      Condo - Units
    </div>
    <input
      className="code-0-2-13"
      name="UNITS_CONDO"
      onChange={[Function]}
      type="text"
      value=""
    />
    <div
      className="units-0-2-14"
    >
      dwelling units
    </div>
    <div
      className="calcUnits-0-2-15"
    >
       
    </div>
  </div>
  <div
    className="rule-0-2-9 numberRule-0-2-10"
  >
    <div
      className="name-0-2-11"
    >
      Condo - Enter Parking Space Req'd
    </div>
    <input
      className="code-0-2-13"
      name="PARK_CONDO"
      onChange={[Function]}
      type="text"
      value=""
    />
    <div
      className="units-0-2-14"
    >
      spcs
    </div>
    <div
      className="calcUnits-0-2-15"
    >
       
    </div>
  </div>
</div>
`;

exports[`Storyshots SinglePageRulePanels default 1`] = `
Array [
  <div
    className="panel-0-2-19"
  >
    <fieldset>
      <legend
        className="legend-0-2-20"
      >
        Residential Inputs
      </legend>
      <div
        className="root-0-2-18"
      >
        <div
          className="rule-0-2-9 numberRule-0-2-10"
        >
          <div
            className="name-0-2-11"
          >
            # Habitable Rooms &lt; 3
          </div>
          <input
            className="code-0-2-13"
            name="UNITS_HABIT_LT3"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-14"
          >
            dwelling units
          </div>
          <div
            className="calcUnits-0-2-15"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-9 numberRule-0-2-10"
        >
          <div
            className="name-0-2-11"
          >
            # Habitable Rooms = 3
          </div>
          <input
            className="code-0-2-13"
            name="UNITS_HABIT_3"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-14"
          >
            dwelling units
          </div>
          <div
            className="calcUnits-0-2-15"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-9 numberRule-0-2-10"
        >
          <div
            className="name-0-2-11"
          >
            # Habitable Rooms &gt; 3
          </div>
          <input
            className="code-0-2-13"
            name="UNITS_HABIT_GT3"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-14"
          >
            dwelling units
          </div>
          <div
            className="calcUnits-0-2-15"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-9 numberRule-0-2-10"
        >
          <div
            className="name-0-2-11"
          >
            Condo - Units
          </div>
          <input
            className="code-0-2-13"
            name="UNITS_CONDO"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-14"
          >
            dwelling units
          </div>
          <div
            className="calcUnits-0-2-15"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-9 numberRule-0-2-10"
        >
          <div
            className="name-0-2-11"
          >
            Condo - Enter Parking Space Req'd
          </div>
          <input
            className="code-0-2-13"
            name="PARK_CONDO"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-14"
          >
            spcs
          </div>
          <div
            className="calcUnits-0-2-15"
          >
             
          </div>
        </div>
      </div>
    </fieldset>
  </div>,
  <div
    className="panel-0-2-19"
  >
    <fieldset>
      <legend
        className="legend-0-2-20"
      >
        Commercial Inputs
      </legend>
      <div
        className="root-0-2-18"
      >
        <div
          className="rule-0-2-9 numberRule-0-2-10"
        >
          <div
            className="name-0-2-11"
          >
            Sq Ft - Restaurant/Bar/General
          </div>
          <input
            className="code-0-2-13"
            name="SF_RESTAURANT"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-14"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-15"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-9 numberRule-0-2-10"
        >
          <div
            className="name-0-2-11"
          >
            Sq Ft - Health Club
          </div>
          <input
            className="code-0-2-13"
            name="SF_HEALTH_CLUB"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-14"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-15"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-9 numberRule-0-2-10"
        >
          <div
            className="name-0-2-11"
          >
            Sq Ft - Take-out Restaurant
          </div>
          <input
            className="code-0-2-13"
            name="SF_RESTAURANT_TAKEOUT"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-14"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-15"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-9 numberRule-0-2-10"
        >
          <div
            className="name-0-2-11"
          >
            Sq Ft - Office, Business, Manufacturing, Industrial
          </div>
          <input
            className="code-0-2-13"
            name="SF_OFFICE"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-14"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-15"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-9 numberRule-0-2-10"
        >
          <div
            className="name-0-2-11"
          >
            Sq Ft - Warehouse
          </div>
          <input
            className="code-0-2-13"
            name="SF_WAREHOUSE"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-14"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-15"
          >
             
          </div>
        </div>
      </div>
    </fieldset>
  </div>,
  <div
    className="panel-0-2-19"
  >
    <fieldset>
      <legend
        className="legend-0-2-20"
      >
        Institutional Inputs
      </legend>
      <div
        className="root-0-2-18"
      >
        <div
          className="rule-0-2-9 numberRule-0-2-10"
        >
          <div
            className="name-0-2-11"
          >
            Sq Ft - Medical Offices, Clinics, Service Facilities
          </div>
          <input
            className="code-0-2-13"
            name="SF_INST_MEDICAL_SVC"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-14"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-15"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-9 numberRule-0-2-10"
        >
          <div
            className="name-0-2-11"
          >
            Sq Ft - Other Institutional
          </div>
          <input
            className="code-0-2-13"
            name="SF_INST_OTHER"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-14"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-15"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-9 numberRule-0-2-10"
        >
          <div
            className="name-0-2-11"
          >
            Sq Ft - Government Institution
          </div>
          <input
            className="code-0-2-13"
            name="SF_INST_GOV"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-14"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-15"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-9 numberRule-0-2-10"
        >
          <div
            className="name-0-2-11"
          >
            Patient Hospital Beds
          </div>
          <input
            className="code-0-2-13"
            name="BED_HOSPITAL"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-14"
          >
            beds
          </div>
          <div
            className="calcUnits-0-2-15"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-9 numberRule-0-2-10"
        >
          <div
            className="name-0-2-11"
          >
            Convalescent Institution Beds
          </div>
          <input
            className="code-0-2-13"
            name="BED_CONVALESCENT"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-14"
          >
            beds
          </div>
          <div
            className="calcUnits-0-2-15"
          >
             
          </div>
        </div>
      </div>
    </fieldset>
  </div>,
  <div
    className="panel-0-2-19"
  >
    <fieldset>
      <legend
        className="legend-0-2-20"
      >
        Other Land Use Inputs
      </legend>
      <div
        className="root-0-2-18"
      >
        <div
          className="rule-0-2-9 numberRule-0-2-10"
        >
          <div
            className="name-0-2-11"
          >
            # Seats - Auditorium
          </div>
          <input
            className="code-0-2-13"
            name="SEAT_AUDITORIUM"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-14"
          >
            seats
          </div>
          <div
            className="calcUnits-0-2-15"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-9 numberRule-0-2-10"
        >
          <div
            className="name-0-2-11"
          >
            Sq Ft - Auditorium w/o Seats
          </div>
          <input
            className="code-0-2-13"
            name="SF_AUDITORIUM_NO_SEATS"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-14"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-15"
          >
             
          </div>
        </div>
      </div>
    </fieldset>
  </div>,
]
`;

exports[`Storyshots SinglePageTdmCalculation default 1`] = `
<div
  className="root-0-2-21"
>
  <div
    className="container-0-2-22"
  >
    <div
      className="switchButtonWrapper-0-2-23"
    >
      <div
        className="switchButton-0-2-24"
      >
        <button
          className="root-0-2-29"
        >
          Switch to View
        </button>
      </div>
      <div
        className="root-0-2-7"
      >
        <div
          className="tdm-calculation-metrics-panel"
        >
          <h3>
            A + B
          </h3>
          <div>
            21
          </div>
          <div>
             
            beans
          </div>
        </div>
        <div
          className="tdm-calculation-metrics-panel"
        >
          <h3>
            A * B
          </h3>
          <div>
            68
          </div>
          <div>
             
            beans
          </div>
        </div>
        <div
          className="tdm-calculation-metrics-panel"
        >
          <h3>
            Hypotenuse of Triangle with Sides A and B
          </h3>
          <div>
            17.46424919657298
          </div>
          <div>
             
            beans
          </div>
        </div>
      </div>
    </div>
    <div
      className="rulePanelWrapper-0-2-25"
    >
      <div
        className="rulePanel-0-2-26"
      >
        <h2>
          Project Parameters
        </h2>
        <div
          className="panel-0-2-19"
        >
          <fieldset>
            <legend
              className="legend-0-2-20"
            />
            <div
              className="root-0-2-18"
            >
              <div
                className="rule-0-2-9 numberRule-0-2-10"
              >
                <div
                  className="name-0-2-11"
                >
                  Input Integer A
                </div>
                <input
                  className="code-0-2-13"
                  name="INPUT_INTEGER_A"
                  onChange={[Function]}
                  type="text"
                  value={4}
                />
                <div
                  className="units-0-2-14"
                >
                  beans
                </div>
                <div
                  className="calcUnits-0-2-15"
                >
                   
                </div>
              </div>
              <div
                className="rule-0-2-9 numberRule-0-2-10"
              >
                <div
                  className="name-0-2-11"
                >
                  Input Integer B
                </div>
                <input
                  className="code-0-2-13"
                  name="INPUT_INTEGER_B"
                  onChange={[Function]}
                  type="text"
                  value={17}
                />
                <div
                  className="units-0-2-14"
                >
                  beans
                </div>
                <div
                  className="calcUnits-0-2-15"
                >
                   
                </div>
              </div>
            </div>
          </fieldset>
        </div>
      </div>
      <div
        className="transportDemandStrategies-0-2-27"
      >
        <h2>
           Transportation Demand Strategies
        </h2>
        <div
          className="buttonWrapper-0-2-28"
        >
          &gt;
          <button
            className="tdm-wizard-pkg-button"
            onClick={[Function]}
          >
            Reset All Strategies
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SwitchViewButton default 1`] = `
<button
  className="root-0-2-29"
  onClick={[Function]}
>
  Switch View Button Label
</button>
`;
